<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/circ_image_margin"
        android:layout_width="@dimen/circ_image_size"
        android:layout_height="@dimen/circ_image_size"
        android:src="@drawable/fry"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="@dimen/username_text_size"
        android:layout_marginBottom="15dp"
        android:text="@string/user_name"/>

    <View
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/thin_line_height"
        />

    <LinearLayout
        android:paddingTop="@dimen/thin_line_margin"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:paddingBottom="@dimen/user_info_item_margin_top_bottom"
        android:paddingStart="@dimen/user_info_item_margin_left"
        android:paddingEnd="@dimen/user_info_item_margin_left"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/user_info_item_image_size"
            android:layout_height="@dimen/user_info_item_image_size"
            android:src="@drawable/ic_person_pin_black_36dp"/>

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/user_info_item_info_margin_left"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/user_info_item_title_text_size"
                android:text="@string/username_title"
                android:layout_marginBottom="@dimen/user_info_item_info_title_margin_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="@dimen/user_info_item_info_text_size"
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:clickable="true"
        android:paddingTop="@dimen/thin_line_margin"
        android:background="?attr/selectableItemBackground"
        android:paddingBottom="@dimen/user_info_item_margin_top_bottom"
        android:paddingStart="@dimen/user_info_item_margin_left"
        android:paddingEnd="@dimen/user_info_item_margin_left"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/user_info_item_image_size"
            android:layout_height="@dimen/user_info_item_image_size"
            android:src="@drawable/ic_call_black_36dp"/>

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/user_info_item_info_margin_left"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/user_info_item_title_text_size"
                android:layout_marginBottom="@dimen/user_info_item_info_title_margin_bottom"
                android:text="@string/phone_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="@dimen/user_info_item_info_text_size"
                android:text="@string/user_phone_number"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/thin_line_height"
        />
</LinearLayout>